--- a/summary_2024.Rmd
+++ b/summary_2024.Rmd
@@ -37,6 +37,7 @@ library(kableExtra)
 library(htmltools)
 library(leaflet)
 library(leaflet.extras)
+library(fontawesome)
 ```
 
 <div class="button">
@@ -238,6 +239,8 @@ grid.arrange(top_stations_grob, image_grob, ncol = 2)
 
 \
 
+<div class="text-border">
+
 ### Top Recommendations
 
 **Leisure-Focused Marketing:** Position membership as a way to enhance casual riders' existing leisure habits by emphasizing benefits, such as unlimited rides and extended ride times.
@@ -246,9 +249,12 @@ grid.arrange(top_stations_grob, image_grob, ncol = 2)
 
 **Promotional Incentives:** Offer weekend-focused memberships, seasonal discounts, referral bonuses, and strategic partnerships with major Chicago events and leisure attractions.
 
+</div>
+
 <img src="./resources/images/Logo_Freepik.png" alt="Cyclistic Logo" style="width:200px; display:block; margin:auto;">
 
 # Methodology
+<span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Top](#)</span>
 
 ---
 
@@ -281,7 +287,10 @@ Cyclistic, a bike-share company in Chicago, aims to increase its number of annua
 
 To support this initiative, I have been assigned to analyze how annual members and casual riders use Cyclistic bikes differently. This analysis will identify key trends in usage patterns, which will inform marketing strategies designed to encourage casual riders to become members.
 
-For reference, the full case study details can be found in the [Appendix](#scenario).
+<span class="fa-container">
+  <a href="#scenario" class="fa-icon">`r fa("info-circle")`</a> 
+  For reference, the full case study details can be found in the [Appendix](#scenario).
+</span>
 
 \
 
@@ -293,7 +302,10 @@ The analysis incorporates cleaned ride data from all `r format(nrow(df), big.mar
 
 Google linked to [data](https://divvy-tripdata.s3.amazonaws.com/index.html) provided by Lyft and Divvy from their Chicago operations. The data has been made available by Motivate International Inc. under this [license](https://divvybikes.com/data-license-agreement).
 
-A [Data Dictionary](#data-dictionary) is attached in the Appendix.
+<span class="fa-container">
+  <a href="#data-dictionary" class="fa-icon">`r fa("book")`</a> 
+  A [Data Dictionary](#data-dictionary) is attached in the Appendix.
+</span>
 
 \
 
@@ -301,7 +313,7 @@ A [Data Dictionary](#data-dictionary) is attached in the Appendix.
 
 ---
 
-Google provided a starter template to clean the data (see [here](https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone/blob/main/data_cleaning_v1.R), covering only Q1 2019 and Q1 2020. The template was substantially modified to clean all of 2024 (see [here](https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone/blob/main/data_cleaning_v3.R)).
+Google provided a starter template to clean the data (see [here](https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone/blob/main/resources/data_cleaning_v1.R), covering only Q1 2019 and Q1 2020. The template was substantially modified to clean all of 2024 (see [here](https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone/blob/main/resources/data_cleaning_v3.R)).
 
 Data cleaning consisted of:
 
@@ -337,7 +349,10 @@ Data cleaning consisted of:
 
 - Casual riders frequent **tourist/leisure spots** (e.g., Shedd Aquarium, Theater on the Lake).
 
-Further insights are available in the [exploratory data analysis](scratch_pad_2024.html).
+<span class="fa-container">
+  <a href="scratch_pad_2024.html" class="fa-icon">`r fa("chart-line")`</a>
+  Further insights are available in the <a href="scratch_pad_2024.html">exploratory data analysis</a>.
+</span>
 
 \
 
@@ -561,6 +576,8 @@ df %>%
 
 ---
 
+<div class="text-border">
+
 #### Summary
 
 - Members dominate total rides and peak during commuting hours.
@@ -573,6 +590,7 @@ df %>%
 
 - Business Recommendation: Cyclistic should tailor promotions based on these insights (e.g., discount weekend passes for casual riders or commuter incentives for members).
 
+</div>
 
 \
 
@@ -627,6 +645,7 @@ df %>%
 <img src="./resources/images/Logo_Freepik.png" alt="Cyclistic Logo" style="width:200px; display:block; margin:auto;">
 
 # Conclusion
+<span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Top](#)</span>
 
 ---
 
@@ -636,15 +655,20 @@ A combination of targeted advertising, compelling promotions, and commuter-focus
 
 Finally, strengthening partnerships with corporations, universities, and public transit systems will enhance Cyclistic’s appeal to commuters. By capitalizing on both the leisure and commuter benefits of membership, Cyclistic can expand its reach, encourage long-term adoption, and solidify its position as Chicago’s go-to bikeshare service. Through these strategic initiatives, Cyclistic is well-positioned to drive membership growth while enriching the overall rider experience.
 
+\
+
 <img src="./resources/images/Logo_AI.jpeg" alt="Cyclistic Logo" style="width:200px; display:block; margin:auto;">
 
+\
+
 # Appendix
+<span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Top](#)</span>
 
 ---
 
 ## Data Dictionary
 
-<span style="font-size: 10pt;">[Back to Data Sources](#data-sources)</span>
+<span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Data Sources](#data-sources)</span>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
@@ -689,70 +713,33 @@ kable(data_dict, caption = "Cyclistic Ride Data Dictionary", format = "html") %>
 
 ## Scenario
 
-<span style="font-size: 10pt;">[Back to Ask](#ask)</span>
+<span style="font-size: 10pt;">[`r fa("arrow-up")` &nbsp; Back to Ask](#ask)</span>
 
 Quoted from the Google Data Analytics Capstone (see PDF [here](https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone/blob/main/resources/Case%20Study%201_How%20does%20a%20bike-share%20navigate%20speedy%20success.pdf)):
 
-<blockquote>You are a junior data analyst working on the marketing analyst team at Cyclistic, a bike-share
-company in Chicago. The director of marketing believes the company’s future success
-depends on maximizing the number of annual memberships. Therefore, your team wants to
-understand how casual riders and annual members use Cyclistic bikes dierently. From these
-insights, your team will design a new marketing strategy to convert casual riders into annual
-members. But first, Cyclistic executives must approve your recommendations, so they must be
-backed up with compelling data insights and professional data visualizations.
+<blockquote style="font-size: 10pt;">You are a junior data analyst working on the marketing analyst team at Cyclistic, a bike-share company in Chicago. The director of marketing believes the company’s future success depends on maximizing the number of annual memberships. Therefore, your team wants to understand how casual riders and annual members use Cyclistic bikes dierently. From these insights, your team will design a new marketing strategy to convert casual riders into annual members. But first, Cyclistic executives must approve your recommendations, so they must be backed up with compelling data insights and professional data visualizations.
 
 Characters and teams
 
-● Cyclistic: A bike-share program that features more than 5,800 bicycles and 600
-docking stations. Cyclistic sets itself apart by also offering reclining bikes, hand
-tricycles, and cargo bikes, making bike-share more inclusive to people with disabilities
-and riders who can’t use a standard two-wheeled bike. The majority of riders opt for
-traditional bikes; about 8% of riders use the assistive options. Cyclistic users are more
-likely to ride for leisure, but about 30% use the bikes to commute to work each day.
+● Cyclistic: A bike-share program that features more than 5,800 bicycles and 600 docking stations. Cyclistic sets itself apart by also offering reclining bikes, hand tricycles, and cargo bikes, making bike-share more inclusive to people with disabilities and riders who can’t use a standard two-wheeled bike. The majority of riders opt for traditional bikes; about 8% of riders use the assistive options. Cyclistic users are more likely to ride for leisure, but about 30% use the bikes to commute to work each day.
 
-● Lily Moreno: The director of marketing and your manager. Moreno is responsible for
-the development of campaigns and initiatives to promote the bike-share program.
-These may include email, social media, and other channels.
+● Lily Moreno: The director of marketing and your manager. Moreno is responsible for the development of campaigns and initiatives to promote the bike-share program. These may include email, social media, and other channels.
 
-● Cyclistic marketing analytics team: A team of data analysts who are responsible for
-collecting, analyzing, and reporting data that helps guide Cyclistic marketing strategy.
-You joined this team six months ago and have been busy learning about Cyclistic’s
-mission and business goals—as well as how you, as a junior data analyst, can help
-Cyclistic achieve them.
+● Cyclistic marketing analytics team: A team of data analysts who are responsible for collecting, analyzing, and reporting data that helps guide Cyclistic marketing strategy. You joined this team six months ago and have been busy learning about Cyclistic’s mission and business goals—as well as how you, as a junior data analyst, can help Cyclistic achieve them.
 
-● Cyclistic executive team: The notoriously detail-oriented executive team will decide
-whether to approve the recommended marketing program.
+● Cyclistic executive team: The notoriously detail-oriented executive team will decide whether to approve the recommended marketing program.
 
 About the company
 
-In 2016, Cyclistic launched a successful bike-share offering. Since then, the program has grown
-to a fleet of 5,824 bicycles that are geotracked and locked into a network of 692 stations across
-Chicago. The bikes can be unlocked from one station and returned to any other station in the
-system anytime.
+In 2016, Cyclistic launched a successful bike-share offering. Since then, the program has grown to a fleet of 5,824 bicycles that are geotracked and locked into a network of 692 stations across Chicago. The bikes can be unlocked from one station and returned to any other station in the system anytime.
 
-Until now, Cyclistic’s marketing strategy relied on building general awareness and appealing to
-broad consumer segments. One approach that helped make these things possible was the
-flexibility of its pricing plans: single-ride passes, full-day passes, and annual memberships.
-Customers who purchase single-ride or full-day passes are referred to as casual riders.
-Customers who purchase annual memberships are Cyclistic members.
+Until now, Cyclistic’s marketing strategy relied on building general awareness and appealing to broad consumer segments. One approach that helped make these things possible was the flexibility of its pricing plans: single-ride passes, full-day passes, and annual memberships. Customers who purchase single-ride or full-day passes are referred to as casual riders. Customers who purchase annual memberships are Cyclistic members.
 
-Cyclistic’s finance analysts have concluded that annual members are much more profitable
-than casual riders. Although the pricing flexibility helps Cyclistic attract more customers,
-Moreno believes that maximizing the number of annual members will be key to future growth.
-Rather than creating a marketing campaign that targets all-new customers, Moreno believes
-there is a solid opportunity to convert casual riders into members. She notes that casual riders
-are already aware of the Cyclistic program and have chosen Cyclistic for their mobility needs.
+Cyclistic’s finance analysts have concluded that annual members are much more profitable than casual riders. Although the pricing flexibility helps Cyclistic attract more customers, Moreno believes that maximizing the number of annual members will be key to future growth. Rather than creating a marketing campaign that targets all-new customers, Moreno believes there is a solid opportunity to convert casual riders into members. She notes that casual riders are already aware of the Cyclistic program and have chosen Cyclistic for their mobility needs.
 
-Moreno has set a clear goal: Design marketing strategies aimed at converting casual riders into
-annual members. In order to do that, however, the team needs to better understand how
-annual members and casual riders differ, why casual riders would buy a membership, and how
-digital media could affect their marketing tactics. Moreno and her team are interested in
-analyzing the Cyclistic historical bike trip data to identify trends.
+Moreno has set a clear goal: Design marketing strategies aimed at converting casual riders into annual members. In order to do that, however, the team needs to better understand how annual members and casual riders differ, why casual riders would buy a membership, and how digital media could affect their marketing tactics. Moreno and her team are interested in analyzing the Cyclistic historical bike trip data to identify trends.
 
-Note that data-privacy issues prohibit you from using riders’ personally identifiable information.
-This means that you won’t be able to connect pass purchases to credit card numbers to
-determine if casual riders live in the Cyclistic service area or if they have purchased multiple
-single passes.
+Note that data-privacy issues prohibit you from using riders’ personally identifiable information. This means that you won’t be able to connect pass purchases to credit card numbers to determine if casual riders live in the Cyclistic service area or if they have purchased multiple single passes.
 
 Three questions will guide the future marketing program:
 
@@ -760,8 +747,7 @@ Three questions will guide the future marketing program:
 2. Why would casual riders buy Cyclistic annual memberships?
 3. How can Cyclistic use digital media to influence casual riders to become members?
 
-Moreno has assigned you the first question to answer: How do annual members and casual
-riders use Cyclistic bikes differently?
+Moreno has assigned you the first question to answer: How do annual members and casual riders use Cyclistic bikes differently?
 
 You will produce a report with the following deliverables:
 
@@ -778,6 +764,8 @@ You will produce a report with the following deliverables:
 &nbsp;&nbsp;&nbsp;&nbsp; 6. Your top three recommendations based on your analysis
 
 </blockquote>
+
+---
 
 <img src="./resources/images/Logo_Freepik.png" alt="Cyclistic Logo" style="width:200px; display:block; margin:auto;">
 <p style="font-size: 12px; color: #555; margin:auto; text-align: center;">Source: <a href="https://www.freepik.com">Freepik</a></p>
